kube/localhost/dax-imgserv-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: dax-imgserv-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - backend:
          serviceName: dax-imgserv-service
          servicePort: 5000
        path: /api/image
